environment/customer-egress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-egress-proxy
  namespace: customer-egress
  labels:
    app.kubernetes.io/name: customer-egress-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: customer-egress-proxy
  ports:
    - name: http-proxy
      port: 8080
      targetPort: proxy
      protocol: TCP
