environment/customer-egress/manifests/test-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-egress-upstream-test
  namespace: customer-egress
  labels:
    app.kubernetes.io/name: customer-egress-upstream-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-egress-upstream-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer-egress-upstream-test
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: test-server
          image: host.docker.internal:5001/cap/mitmproxy@sha256:62d266a86ee95187217866c0e35487837498daa3aa1cdce37d256f07e198a47b
          imagePullPolicy: IfNotPresent
          command:
            - python
            - /config/server.py
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: tls
              mountPath: /tls
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: customer-egress-upstream-test-server
        - name: tls
          secret:
            secretName: customer-egress-upstream-test-tls
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: egress-test
  namespace: customer-egress
spec:
  selector:
    app.kubernetes.io/name: customer-egress-upstream-test
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  type: ClusterIP
